src/app/pages/homepage/homepage.component.scss
/* General Page Styling */
body, html {
  font-family: 'Arial', sans-serif;
  background-color: #f5f5f5;
  margin: 0;
  padding: 0;
  height: 100%;
}

.wrapper {
  padding: 20px;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.session-exam-container {
  display: flex;
  justify-content: space-between;
}

.section {
  flex: 1;
  margin: 0 10px;
  background: #ffffff;
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  margin-top: 20px; /* Adds space between sections */
}

h3 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

input[type="text"], input[type="date"], input[type="time"], button {
  width: calc(100% - 20px); // Accounts for padding
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box; 
}

button {
  background-color: #28a745; /* Green */
  color: white;
  cursor: pointer;
  &:hover {
    background-color: #218838; /* Darker green on hover */
  }
}

.list-container {
  margin-top: 20px;
  overflow-y: auto;
  max-height: 200px; 
  overflow-y: auto; /* Enables scrolling if content overflows */
}

.list-item {
  display: flex;
  justify-content: space-between; 
  align-items: center;
  padding: 10px;
  border-bottom: 1px solid #eee;
}

.session-details, .exam-details {
  flex-grow: 1;
  margin-right: 10px; // Give some space before the buttons
}

.button-container {
  display: flex;
  flex-shrink: 0; // Prevent buttons from shrinking
  gap: 10px;
}

.edit-event, .delete-event {
  border: none;
  color: white;
  padding: 5px 10px;
  border-radius: 4px;
  cursor: pointer;
}

.edit-button {
  background-color: #ffc107; /* Dark yellow */
  &:hover {
    background-color: #b28900; /* Darker shade of yellow on hover */
  }
}

.delete-button {
  background-color: #dc3545; /* Red */
  &:hover {
    background-color: #bd2130; /* Darker shade of red on hover */
  }
}

.complete-button {
  background-color: #17a2b8; 
  &:hover {
    background-color: darken(#17a2b8, 5%);
  }
}

.pomodoro-button {
  background-color: #d9534f; /* Pomodoro red color */
  color: white;
  cursor: pointer;
  padding: 10px 15px;
  border-radius: 4px;
  border: none;
  margin-left: 10px; /* spacing */
  &:hover {
    background-color: #c9302c; /* Darker red on hover */
  }
}

